--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafilio de FalconMasters</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -122,5 +121,33 @@
             </div>
         </section>
     </section>
+
+    <footer>
+        <section class="contacto"></section>
+            <div class="contenedor">
+            
+                <h3 class="titulo">Contacto</h3>
+                <form class="formulario" action="">
+                    <input type="text" placeholder="Nombre" name="nombre" required>
+                    <input type="text" placeholder="Correo" name="Correo" required>
+                    <textarea name="mensaje" placeholder="Mensaje"></textarea>
+                    <input class="boton" type="submit" value="Enviar">
+                </form>
+            </div>
+        </section>
+
+        <div>
+
+            <section class="redes-sociales">
+                <div class="contenedor">
+                    <a class="twitter" href="htto://www.twitter.com/falconmasters"><i class="fa fa-twitter"></i></a>
+                    <a class="facebook" href="htto://www.facebook.com/falconmasters"><i class="fa fa-facebook-f"></i></a>
+                    <a class="youtube" href="htto://www.youtube.com/falconmasters"><i class="fa fa-youtube"></i></a>
+                    <a class="github" href="htto://www.github.com/falconmasters" ><i class="fa fa-github"></i></a>
+                    <a class="instagram" href="htto://www.instagram.com/falconmasters" ><i class="fa fa-instagram"></i></a>
+                </div>
+            </section>
+        </div>
+    </footer>
 </body>
 </html>
