--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minium-scale=1.0">
     <title>Portafilio de FalconMasters</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
@@ -21,8 +21,8 @@
 
             <div class="contenedor-texto">
                 <div class="texto">
-                    <h1 class="no,bre">Carlos Arturo</h1>
-                    <h2 class="profesion">Desarrollar Web</h2>
+                    <h1 class="nombre">Carlos Arturo</h1>
+                    <h2 class="profesion">Desarrollador Web</h2>
                 </div>
             </div>
         </div>
