Estilos CSS al Acerca de

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="texto">
                 <h3 class="titulo">Acerca de</h3>
-                <p>This is <span class="bold">Photoshop's version</span> of lorem ipsum. Proin gravida nibh vel velit auctor aliquet <span class="bold">bibedum auctor</span>, nisi elit consequat ipsum,</p>
+                <p>This is <span class="bold">Photoshop's version</span> of lorem ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean solllicitudin, lorem quis<span class="bold">bibedum auctor , nisi elit consequat ipsum,</span></p>
             </div>
         </div>
         </section>
