Estilos CSS a los Trabajos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -60,7 +60,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -69,7 +69,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -78,7 +78,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -87,7 +87,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -96,7 +96,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -105,7 +105,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -114,7 +114,7 @@
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
-                            <p class="catergoria">HTML ~ CSS ~ PHP</p>
+                            <p class="categoria">HTML ~ CSS ~ PHP</p>
                         </div>
                     </div>
                 </div>
