Estilos CSS al Formulario de Contacto

--- a/index.html
+++ b/index.html
@@ -123,22 +123,19 @@
     </section>
 
     <footer>
-        <section class="contacto"></section>
+        <section class="contacto">
             <div class="contenedor">
-            
                 <h3 class="titulo">Contacto</h3>
                 <form class="formulario" action="">
                     <input type="text" placeholder="Nombre" name="nombre" required>
-                    <input type="text" placeholder="Correo" name="Correo" required>
+                    <input type="email" placeholder="Correo" name="correo" required>
                     <textarea name="mensaje" placeholder="Mensaje"></textarea>
                     <input class="boton" type="submit" value="Enviar">
                 </form>
             </div>
         </section>
 
-        <div>
-
-            <section class="redes-sociales">
+        <section class="redes-sociales">
                 <div class="contenedor">
                     <a class="twitter" href="htto://www.twitter.com/falconmasters"><i class="fa fa-twitter"></i></a>
                     <a class="facebook" href="htto://www.facebook.com/falconmasters"><i class="fa fa-facebook-f"></i></a>
@@ -146,8 +143,7 @@
                     <a class="github" href="htto://www.github.com/falconmasters" ><i class="fa fa-github"></i></a>
                     <a class="instagram" href="htto://www.instagram.com/falconmasters" ><i class="fa fa-instagram"></i></a>
                 </div>
-            </section>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
